fix GET /command robot_id query parameter
